--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -2,6 +2,20 @@
   text-align: center;
 }
 
+::-webkit-scrollbar {
+  /*  스크롤바 막대 너비 설정 */
+  width: 3px;
+}
+::-webkit-scrollbar-track {
+  background-color: none;
+}
+::-webkit-scrollbar-thumb {
+  /* 스크롤바 막대 높이 설정 : 현재가 제일 작은 값 */
+  height: 10px;
+  border-radius: 100px;
+  box-shadow: inset 0 0 10px gray;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
