--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -6,6 +6,8 @@
   /*  스크롤바 막대 너비 설정 */
   width: 3px;
 }
+
+/* -------------- dropdown ----------------- */
 ::-webkit-scrollbar-track {
   background-color: none;
 }
@@ -15,6 +17,79 @@
   border-radius: 100px;
   box-shadow: inset 0 0 10px gray;
 }
+/* -------------- dropdown ----------------- */
+
+/* -------------- toggle ----------------- */
+.container {
+  text-align: center;
+}
+.toggle-switch {
+  position: relative;
+  width: 50px;
+  display: inline-block;
+  text-align: left;
+  top: -3px;
+}
+.checkbox {
+  display: none;
+}
+.label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 0 solid #bbb;
+  border-radius: 20px;
+}
+.inner {
+  display: block;
+  width: 200%;
+  margin-left: -100%;
+  transition: margin 0.3s ease-in 0s;
+}
+.inner:before,
+.inner:after {
+  float: left;
+  width: 50%;
+  height: 30px;
+  padding: 0;
+  line-height: 36px;
+  color: #fff;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+.inner:before {
+  content: "";
+  padding-left: 10px;
+  background-color: #fbc037;
+  color: #fff;
+}
+.inner:after {
+  content: "";
+  padding-right: 10px;
+  background-color: #bbb;
+  color: #fff;
+  text-align: right;
+}
+.switch {
+  display: block;
+  width: 20px;
+  margin: 5px;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 20px;
+  border: 0 solid #bbb;
+  border-radius: 20px;
+  transition: all 0.3s ease-in 0s;
+}
+.checkbox:checked + .label .inner {
+  margin-left: 0;
+}
+.checkbox:checked + .label .switch {
+  right: 0px;
+}
+/* -------------- toggle ----------------- */
 
 .App-logo {
   height: 40vmin;
