--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -2,9 +2,12 @@
   text-align: center;
 }
 
-::-webkit-scrollbar {
-  /*  스크롤바 막대 너비 설정 */
-  width: 3px;
+/* -------------- drag off ----------------- */
+body {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* -------------- dropdown ----------------- */
@@ -20,6 +23,12 @@
 /* -------------- dropdown ----------------- */
 
 /* -------------- toggle ----------------- */
+
+::-webkit-scrollbar {
+  /*  스크롤바 막대 너비 설정 */
+  width: 3px;
+}
+
 .container {
   text-align: center;
 }
@@ -28,7 +37,7 @@
   width: 50px;
   display: inline-block;
   text-align: left;
-  top: -3px;
+  top: -1px;
 }
 .checkbox {
   display: none;
