--- a/src/static/fonts/font.css
+++ b/src/static/fonts/font.css
@@ -1,36 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
-
-body {
-  /* font-size: 20px; */
-  font-family: "Roboto", "Noto Sans Korean";
-}
-
 @font-face {
   /* 사용할 폰트의 이름 */
-  font-family: "Roboto", sans-serif;
-  src: url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap")
-    format("woff");
+  font-family: "'Noto Sans KR', sans-serif;";
+  font-display: swap;
+
+  /* src: 사용할 폰트의 위치 및 형식 
+    Safari, Android, iOS => ttf
+    Modern Browsers => woff
+    IE6-IE8 => eot */
+
+  src: url("./NotoSansKR-Thin.otf") format("opentype"),
+    url("./NotoSansKR-Regular.otf") format("opentype"),
+    url("./NotoSansKR-Medium.otf") format("opentype"),
+    url("./NotoSansKR-Bold.otf") format("opentype"),
+    url("./NotoSansKR-Black.otf") format("opentype");
 
   /* 사용할 폰트의 기본 스타일  Regular*/
-  font-weight: 100;
+  font-weight: 400;
   font-style: normal;
 }
-
-@font-face {
-  /* 사용할 폰트의 이름 */
-  font-family: "Noto Sans Korean", sans-serif;
-  src: url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap")
-    format("woff");
-
-  /* 사용할 폰트의 기본 스타일  Regular*/
-  font-weight: 100;
-  font-style: normal;
-}
-
-/* Noto Sans Korean */
-/* font-family: 'Noto Sans KR', sans-serif; */
-
-/* Roboto */
-/* font-family: 'Noto Sans KR', sans-serif;
-font-family: 'Roboto', sans-serif; */
